log
Mon 17 Apr 2023 07:10:36 PM UTC: 
 tests:  1|8
total_score: 0/70
d528389
Mon 17 Apr 2023 07:33:50 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:13: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   42 |   TreeNode* nuevoNodo = createTreeNode(lower_than,NULL);
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a71094
Mon 17 Apr 2023 07:35:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:16: error: implicit declaration of function ‘createTreeNdoe’; did you mean ‘createTreeNode’? [-Werror=implicit-function-declaration]
   42 |   tree->root = createTreeNdoe(lower_than,NULL);
      |                ^~~~~~~~~~~~~~
      |                createTreeNode
treemap.c:42:14: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   42 |   tree->root = createTreeNdoe(lower_than,NULL);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
b1cae7d
Mon 17 Apr 2023 07:38:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
aaa1460
Mon 17 Apr 2023 07:39:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
df77fb0
Tue 18 Apr 2023 03:00:05 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
52a765e
Tue 18 Apr 2023 03:02:39 AM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  4|7
total_score: 5/70
d042486
Tue 18 Apr 2023 04:03:48 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|7
total_score: 5/70
dab7b4f
Tue 18 Apr 2023 04:07:28 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
184e327
Tue 18 Apr 2023 04:13:03 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:93:16: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   93 |     } else if (lower_than(key,aux->pair->key) == 0) {
      |                ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1041fa5
